--- a/第三章.基本概念.md
+++ b/第三章.基本概念.md
@@ -3,10 +3,10 @@
 
 
 ---
-## 3.1 语法##
-## 3.2 关键字和保留字##
-## 3.3 变量##
-## 3.4 数据类型##
+## 3.1 语法
+## 3.2 关键字和保留字
+## 3.3 变量
+## 3.4 数据类型
 Safari 5 及之前版本、Chrome7及之前版本，在对正则表达式调用typeof操作符时会返回**"function"**，而其他浏览器在这种情况下会返回**"object"**。
 
 实际上，undefined 值是派生自null值的，因此ECMA-262规定对它们的相等性测试要返回 true： 
@@ -14,7 +14,7 @@ Safari 5 及之前版本、Chrome7及之前版本，在对正则表达式调用t
     alert(null == undefined); //true 
     
     
-##3.5操作符##
+## 3.5操作符
 只要意在保存对象的变量还没有真正保存对象，就应该明确地让该变量保存 null 值。这样做不仅可以
 体现 null 作为空对象指针的惯例，而且也有助于进一步区分 null 和 undefined。
 
@@ -60,5 +60,5 @@ null == 0 false
 
 
 
-## 3.7函数##
+## 3.7函数
 
