--- a/第四章.变量作用域、内存问题.md
+++ b/第四章.变量作用域、内存问题.md
@@ -4,7 +4,7 @@
 
 
 ---
-##4.1 基本类型和引用类型的值##
+## 4.1 基本类型和引用类型的值
 
 javascript传递参数如果是object的话，是按值传递
 
@@ -107,3 +107,59 @@ code里的注释太小看不清，我移到这里来：/* obj1仍然指向原来
  *是因为changeStuff里的第一条语句，这个时候obj是指向obj1的 .
  *再啰嗦一句，如果是按引用传递的话，这个时候obj1.value应该是等于'222'的
 */
+## 4.2 执行环境及作用域
+##4.3 垃圾收集
+JavaScript 中最常用的垃圾收集方式是**标记清除（mark-and-sweep）**。当变量进入环境（例如，在函数中声明一个变量）时，就将这个变量标记为“进入环境”。
+而当变量离开环境时，则将其
+标记为“离开环境”。
+垃圾收集器在运行的时候会给存储在内存中的所有变量都加上标记（当然，可以使用任何标记方式）。然后，它会去掉环境中的变量以及被环境中的变量引用的变量的标记。而在此之后再被加上标记的变量将被视为准备删除的变量，原因是环境中的变量已经无法访问到这些变量了。最后，垃圾收集器完成内存清除工作，销毁那些带标记的值并回收它们所占用的内存空间。
+
+到 2008 年为止，IE、Firefox、Opera、Chrome 和 Safari 的 JavaScript 实现使用的都是标记清除式的
+垃圾收集策略（或类似的策略），只不过垃圾收集的时间间隔互有不同。
+
+另一种不太常见的垃圾收集策略叫做**引用计数（reference counting**）。引用计数的含义是跟踪记录每个值被引用的次数。当声明了一个变量并将一个引用类型值赋给该变量时，则这个值的引用次数就是 1。
+如果同一个值又被赋给另一个变量，则该值的引用次数加1。相反，如果包含对这个值引用的变量又取得了另外一个值，则这个值的引用次数减 1。当这个值的引用次数变成 0 时，则说明没有办法再访问这个值了，因而就可以将其占用的内存空间回收回来。这样，当垃圾收集器下次再运行时，它就会释放那些引用次数为零的值所占用的内存。
+Netscape Navigator 3.0 是最早使用引用计数策略的浏览器，但很快它就遇到了一个严重的问题：**循环引用**。
+
+    function problem(){
+    var objectA = new Object();
+    var objectB = new Object();
+    objectA.someOtherObject = objectB;
+    objectB.anotherObject = objectA;
+    } 
+    
+这两个对象的引用次数都是2。在采用标记清除策略的实现中，由于函数执行之后，这两个对象都离开了作用域，因此这种相互引用不是个问题。但在采用引用计数策略的实现中，当函数执行完毕后，objectA和objectB还将继续存在，因为它们的引用次数永远不会是 0。假如这个函数被重复多次调用，就会导致大量内存得不到回收。为此，Netscape 在 Navigator 4.0 中放弃了引用计数方式，转而采用标记清除来实现其垃圾收
+集机制。可是，引用计数导致的麻烦并未就此终结。
+
+IE 中有一部分对象并不是原生 JavaScript对象。例如，其BOM和DOM中的对象就是使用 C++以 COM（Component Object Model，组件对象模型）对象的形式实现的，而 COM 对象的垃圾收集机制采用的就是引用计数策略。
+因此，即使 IE 的 JavaScript 引擎是使用标记清除策略来实现的，但JavaScript 访问的 COM 对象依然是基于引用计数策略的。换句话说，只要在 IE 中涉及 COM 对象，就会存在循环引用的问题。下面这个简单的例子，展示了使用 COM 对象导致的循环引用问题：
+
+    var element = document.getElementById("some_element");
+    var myObject = new Object();
+    myObject.element = element;
+    element.someObject = myObject; 
+
+这个例子在一个 DOM 元素（element）与一个原生JavaScript对象（myObject）之间创建了循环引用。其中，变量myObject有一个名为element的属性指向element对象；而变量 element也有一个属性名叫someObject回指myObject。
+
+由于存在这个循环引用，即使将例子中的DOM从页面中移除，它也永远不会被回收。
+
+为了避免类似这样的循环引用问题，最好是在不使用它们的时候手工断开原生JavaScript 对象与DOM元素之间的连接。例如，可以使用下面的代码消除前面例子创建的循环引用：
+
+    myObject.element = null;
+    element.someObject = null; 
+
+随着 IE7 的发布，其 JavaScript引擎的垃圾收集例程改变了工作方式：触发垃圾收集的变量分配、字面量和（或）数组元素的临界值被调整为动态修正。IE7中的各项临界值在初始时与 IE6 相等。
+如果垃圾收集例程回收的内存分配量低于15%，则变量、字面量和（或）数组元素的临界值就会加倍。
+如果例程回收了 85%的内存分配量，则将各种临界值重置回默认值。这一看似简单的调整，极大地提升了 IE在运行包含大量 JavaScript 的页面时的性能。
+
+
+而优化内存占用的最佳方式，就是为执行中的代码只保存必要的数据。一旦数据不再有用，最好通过将其值设置为null来释放其引用——这个做法叫做解除引用（dereferencing）。这一做法适用于大多数全局变量和全局对象的属性。局部变量会在它们离开执行环境时自动被解除引用，如下面这个例子所示：
+
+    function createPerson(name){
+    var localPerson = new Object();
+     localPerson.name = name;
+    return localPerson;
+    }
+    var globalPerson = createPerson("Nicholas");
+    // 手工解除 globalPerson 的引用
+    globalPerson = null; 
